Completed my new course Using Python to Access Web Data on Coursera Python for Everybody provided by Michigan University.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /.idea/
+/Using_python_to_access_web_data/twitterAPI/hidden.py
+/Using_python_to_access_web_data/test.py
+/Using_python_to_access_web_data/test2.py
